# aml-system

./: README.md  SOURCE.md
ai_agents/: all_transactions.json  main.py  requirements.txt  visualize_flow.py  wallet_tracker3.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: page.tsx
frontend/src/: App.css  App.tsx  all_transactions.json  index.css  vite-env.d.ts
frontend/src/components/: TreeChart.css  TreeChart.tsx  TreeNode.css  TreeNode.tsx
frontend/src/components/input-page/: Content.css  Content.tsx  CursorTrail.tsx  EdgeLabel.css  EdgeLabel.tsx
frontend/src/lib/: transactionTreeData.ts  treeData.ts
frontend/src/pages/: Index.css  Index.tsx  Input.tsx  NotFound.tsx
workflow_system/: config.py  main.py  pyproject.toml  test.py
workflow_system/src/: buffer.py  database.py  models.py  workflow.py  workflow_manager.py
