[project]
name = "workflow-system"
version = "0.1.0"
description = "AI agent management system"
authors = [
    {name = "Miniiar Rakhimkulov",email = "miniyar23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-secrets (>=0.2.1,<0.3.0)",
    "sse-starlette (>=2.2.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "motor (>=3.3.2,<4.0.0)",
    "pymongo (>=4.6.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
